# ThreeLabOOP

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: analysis.md
include/: Three.h
src/: Three.cpp  main.cpp  three.cpp  three.h
test/: test_three.cpp
tests/: ThreeTests.cpp
